WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
180685
REGRESSION(
r225683
): Chakra test failure in es6/regex-unicode.js for 32bit builds
https://bugs.webkit.org/show_bug.cgi?id=180685
Summary
REGRESSION(r225683): Chakra test failure in es6/regex-unicode.js for 32bit bu...
Michael Saboff
Reported
2017-12-11 16:59:14 PST
https://build.webkit.org/builders/Apple%20High%20Sierra%2032-bit%20JSC%20%28BuildAndTest%29/builds/671
https://build.webkit.org/builders/Apple%20High%20Sierra%2032-bit%20JSC%20%28BuildAndTest%29/builds/671/steps/webkit-32bit-jsc-test/logs/stdio
failure: ChakraCore.yaml/ChakraCore/test/es6/regex-unicode.js.default ChakraCore.yaml/ChakraCore/test/es6/regex-unicode.js.default: Detected failures: ChakraCore.yaml/ChakraCore/test/es6/regex-unicode.js.default: *** Running test #4 (3): A character set containing a range spanning multiple planes should match characters from all those planes ChakraCore.yaml/ChakraCore/test/es6/regex-unicode.js.default: Test threw exception: assert.isTrue failed: expected: true actual: false: First character in plane #1 ChakraCore.yaml/ChakraCore/test/es6/regex-unicode.js.default: FAILED ChakraCore.yaml/ChakraCore/test/es6/regex-unicode.js.default: Summary of tests: total executed: 7; passed: 6; failed: 1 FAIL: ChakraCore.yaml/ChakraCore/test/es6/regex-unicode.js.default
Attachments
Patch
(1.86 KB, patch)
2017-12-11 17:09 PST
,
Michael Saboff
saam
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2017-12-11 17:00:09 PST
<
rdar://problem/35982788
>
Michael Saboff
Comment 2
2017-12-11 17:09:25 PST
Created
attachment 329060
[details]
Patch
Alex Christensen
Comment 3
2017-12-11 17:21:51 PST
Comment on
attachment 329060
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=329060&action=review
> Source/JavaScriptCore/ChangeLog:3 > + REGREASSION(
r225683
): Chakra test failure in es6/regex-unicode.js for 32bit builds
I don't understand why this would be specific to 32-bit builds.
Michael Saboff
Comment 4
2017-12-11 21:42:04 PST
(In reply to Alex Christensen from
comment #3
)
> Comment on
attachment 329060
[details]
> Patch > > View in context: >
https://bugs.webkit.org/attachment.cgi?id=329060&action=review
> > > Source/JavaScriptCore/ChangeLog:3 > > + REGREASSION(
r225683
): Chakra test failure in es6/regex-unicode.js for 32bit builds > > I don't understand why this would be specific to 32-bit builds.
Because Unicode regular expressions are handled by JIT'ed code on 64 bit platforms. The failure was in the interpreter.
Michael Saboff
Comment 5
2017-12-11 21:47:20 PST
Committed
r225771
: <
https://trac.webkit.org/changeset/225771
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug